--- a/kurylik.pl/4382.md
+++ b/kurylik.pl/4382.md
@@ -1,5 +1,5 @@
-Adres:
-ul. Wojska Polskiego 6
-58-160 Świebodzice, Dolnośląskie
-NIP	884-23-15-257
+Adres:<br />
+ul. Wojska Polskiego 6<br />
+58-160 Świebodzice, Dolnośląskie<br />
+NIP	884-23-15-257<br />
 REGON	365785515
